nullaway_error_0751B23E-2535-4FC4-92FF-A008569E937E.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-aop/src/main/java/org/springframework/aop/aspectj/annotation/InstantiationModelAwarePointcutAdvisorImpl.java:202: error: [NullAway] unboxing of a @Nullable value
		return this.isBeforeAdvice;
		           ^
    (see http://t.uber.com/nullaway )
